gcc/testsuite/rust/rustc/ui/did_you_mean/issue-49746-unicode-confusable-in-float-literal-expt.rs
const UNIVERSAL_GRAVITATIONAL_CONSTANT: f64 = 6.674e−11; // m³⋅kg⁻¹⋅s⁻²
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }

fn main() {}

